crates/raster/tests/ui/recur_tile_invalid_return.stderr
error: custom attribute panicked
 --> tests/ui/recur_tile_invalid_return.rs:9:1
  |
9 | #[tile(kind = recur)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `#[tile(kind = recur)]` output-only tiles must return `RecurOutput<S>` or `RecurControl<RecurOutput<S>>`
